--- a/Organizze/app/src/main/res/layout/intro_cadastro.xml
+++ b/Organizze/app/src/main/res/layout/intro_cadastro.xml
@@ -35,12 +35,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/primaria"
         android:onClick="btCadastrar"
         android:text="Cadastre-se"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
