--- a/Organizze/app/src/main/res/values/colors.xml
+++ b/Organizze/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaria">#01C7D2</color>
+    <color name="primariaDark">#00b2bc</color>
+    <color name="Acent">#ff706a</color>
+
 </resources>
