--- a/Organizze/app/src/main/res/values/colors.xml
+++ b/Organizze/app/src/main/res/values/colors.xml
@@ -11,4 +11,18 @@
     <color name="primariaDark">#00b2bc</color>
     <color name="Acent">#ff706a</color>
 
+    <!-- Cores Despesas -->
+    <color name="colorPrimaryDespesas">#FF706A</color>
+    <color name="colorPrimaryDarkDespesas">#E66560</color>
+    <color name="colorAccentDespesas">#FF706A</color>
+    <!-- Cores Receitas -->
+    <color name="colorPrimaryReceita">#00D39E</color>
+    <color name="colorPrimaryDarkReceita">#00BE8B</color>
+    <color name="colorAccentReceita">#00D39E</color>
+
+
+
+
+
+
 </resources>
