--- a/Organizze/app/src/main/res/values/colors.xml
+++ b/Organizze/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="primaria">#01C7D2</color>
     <color name="primariaDark">#00b2bc</color>
     <color name="Acent">#ff706a</color>
+    <color name="botaoSair">#EAF27C</color>
 
     <!-- Cores Despesas -->
     <color name="colorPrimaryDespesas">#FF706A</color>
