--- a/videosTeste/app/src/main/res/layout/adapter_video.xml
+++ b/videosTeste/app/src/main/res/layout/adapter_video.xml
@@ -11,10 +11,10 @@
 
     <ImageView
         android:id="@+id/imageCapa"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_weight="0"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:srcCompat="@android:drawable/btn_star" />
 
     <TextView
         android:id="@+id/textVideo"
@@ -27,4 +27,5 @@
     <include
         layout="@layout/divisor"
         android:paddingTop="5dp" />
+
 </LinearLayout>
