--- a/videosTeste/app/src/main/res/layout/toolbar.xml
+++ b/videosTeste/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
@@ -13,6 +13,8 @@
         tools:ignore="MissingConstraints"
         app:titleTextColor="@color/white"/>
 
+    <sea
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
